Fix width from being too wide

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,6 @@
 html, body, #app, #app>div {
   height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
